[package]
name = "place-coin"
version = "0.1.0"
edition = "2021"

[lib]
name = "place_coin"
path = "src\\lib.rs"

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
chrono = { version ="0.4.19", features = ["serde"] }
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["sha3"] }
