[package]
name = "place-coin"
version = "0.1.0"
edition = "2021"

[lib]
name = "place_coin"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.56"
bincode = "1.3.3"
bs58 = "0.4.0"
chrono = { version ="0.4.19", features = ["serde"] }
ecdsa = "0.13.4"
k256 = { version = "0.10.4", features = ["serde", "pem"] }
rand_core = "0.6.3"
rayon = "1.5.1"
serde = { version = "1.0.136", features = ["derive"] }
sha3 = "0.10.1"
